kubernetes/infrastructure/security/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: security
  labels:
    app.kubernetes.io/name: security
    app.kubernetes.io/instance: security
